# thaixfonts

./: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac  configure.in  thai.alias  thaixfonts.spec.in
branches/thep/: Makefile  thai.alias
branches/thep/dbthaitext_tis620/: dbtt08.bdf
branches/thep/manop_bdf/: thai6x14.bdf
branches/thep/phaisarn/: angsa10i.pcf.bdf  angsa14.pcf.bdf  angsa14b.pcf.bdf  angsa18z.pcf.bdf
dbthaitext/: Makefile.am  dbtt00.bdf  dbtt25.bdf  dbtt27.bdf
dbthaitext_tis620/: dbtt04.bdf  dbtt06.bdf  dbtt29.bdf
debian/: changelog  control  copyright  rules  watch  xfonts-thai-etl.changelog-pre1.2.5  xfonts-thai-etl.install  xfonts-thai-manop.install  xfonts-thai-nectec.alias  xfonts-thai-poonlap.copyright  xfonts-thai-poonlap.install  xfonts-thai-vor.copyright  xfonts-thai-vor.install  xfonts-thai.copyright
etlthai/: Makefile.am
manop/: Makefile.am
manop_bdf/: README  thai8x20.bdf
nectec/: Makefile.am
phaisarn/: Makefile.am  PtFixed.bdf  PtLight.bdf  PtMule.bdf  PtThai.bdf  ThaiMediaMule.pcf.bdf  angsa10z.bdf  angsa12i.bdf  angsa12z.bdf  angsa14.bdf  angsa14b.bdf  angsa14i.bdf  angsa14z.bdf  angsa16.bdf  angsa16b.bdf  angsa16i.bdf  angsa16z.pcf.bdf  angsa18.bdf  angsa18z.bdf  angsa24b.pcf.bdf  angsa24z.bdf
poonlap/: Makefile.am  thai18bi_emacs.bdf
scripts/: makefont
tags/deb_1_2_5__6/dbthaitext/: dbtt21.bdf  dbtt24.bdf  dbtt35.bdf
tags/deb_1_2_5__6/debian/: changelog  copyright  rules  xfonts-thai-manop.alias  xfonts-thai-manop.changelog-pre1.2.5  xfonts-thai-vor.install
tags/deb_1_2_5__6/manop/: .cvsignore  thai8x16.bdf
tags/deb_1_2_5__6/nectec/: thai18.bdf  thai18i.bdf
tags/deb_1_2_5__6/phaisarn/: angsa10z.bdf  angsa14z.bdf
tags/deb_1_2_5__7/: AUTHORS
tags/deb_1_2_5__7/dbthaitext/: dbtt23.bdf  dbtt28.bdf
tags/deb_1_2_5__7/debian/: changelog  xfonts-thai-etl.alias  xfonts-thai-vor.alias
tags/deb_1_2_5__7/nectec/: thai18bi.bdf
tags/deb_1_2_5__7/phaisarn/: 8859-11.lst  PsThai.bdf  angsa16.bdf  angsa24b.bdf
tags/deb_1_2_5__7/scripts/: chenc.iso
tags/deb_1_2_5__8/dbthaitext/: dbtt12.bdf
tags/deb_1_2_5__8/debian/: control  rules  xfonts-thai-manop.install  xfonts-thai-vor.changelog-pre1.2.5  xfonts-thai-vor.docs
tags/deb_1_2_5__8/nectec/: thai18b.bdf
tags/deb_1_2_5__8/phaisarn/: angsa10i.bdf
tags/deb_1_2_5__8/poonlap/: pvemacs_20i.bdf  thai18_emacs.bdf  thai18b_emacs.bdf
tags/deb_1_2_5__8/yenbut/: thai8x13.bdf  thai9x13.bdf
tags/deb_1_2_5__9/dbthaitext/: dbtt11.bdf  dbtt16.bdf  dbtt34.bdf
tags/deb_1_2_5__9/debian/: changelog  copyright  xfonts-thai-nectec.changelog-pre1.2.5  xfonts-thai-poonlap.docs  xfonts-thai.lintian-overrides
tags/deb_1_2_5__9/phaisarn/: angsa14i.bdf  angsa18b.bdf
tags/deb_1_2_5__9/poonlap/: pvemacs_20b.bdf  pvfixed_20b.bdf  thai18i_emacs.bdf
tags/r1_2_1/: thaixfonts.spec.in
tags/r1_2_1/dbthaitext/: dbtt13.bdf  dbtt15.bdf  dbtt31.bdf
tags/r1_2_1/etlthai/: Makefile.am
tags/r1_2_1/manop/: Makefile.am  thai7x18.bdf
tags/r1_2_1/nectec/: Makefile.am
tags/r1_2_1/phaisarn/: PtSanSerif.bdf  angsa12i.bdf  angsa24i.bdf
tags/r1_2_1/poonlap/: Makefile.am  pvfixed_20r.bdf
tags/r_1_2/dbthaitext_tis620/: dbtt02.bdf  dbtt03.bdf  dbtt14.bdf
tags/r_1_2/phaisarn/: PtRamaFont.pcf.bdf  PtSanSerifB.bdf  angsa10b.pcf.bdf
tags/r_1_2/scripts/: genpcf
tags/r_1_2_5/: COPYING  ChangeLog  Makefile.am  thaixfonts.spec.in
tags/r_1_2_5/nectec/: LICENSE
tags/r_1_2_5/phaisarn/: PtSanSerifB.bdf  angsa10b.bdf
tags/r_1_2_5/poonlap/: pvemacs_20bi.bdf  pvemacs_20r.bdf
tags/r_1_2_6/: configure.ac
tags/r_1_2_6/dbthaitext/: dbtt05.bdf  dbtt19.bdf  dbtt20.bdf  dbtt26.bdf
tags/r_1_2_6/phaisarn/: PnThai.bdf  angsa12.bdf  angsa24.bdf
tags/r_1_2_6/poonlap/: Makefile.am
tags/r_1_2_7/: COPYING  ChangeLog  Make.rule  configure.ac
tags/r_1_2_7/dbthaitext/: dbtt07.bdf  dbtt10.bdf  dbtt18.bdf  dbtt30.bdf
tags/r_1_2_7/phaisarn/: angsa10.bdf  angsa16i.bdf  angsa18i.bdf  angsa24i.bdf
tags/r_1_2_7/poonlap/: pvfixed_20bi.bdf  pvfixed_20i.bdf  pvfixed_8r.bdf
tags/r_1_2_7/scripts/: chenc.tis
trunk/: COPYING  ChangeLog  Make.rule  Makefile.am  NEWS  README  configure.ac  configure.in  thai.alias  thaixfonts.spec.in
trunk/dbthaitext/: Makefile.am  dbtt01.bdf  dbtt09.bdf  dbtt17.bdf  dbtt32.bdf  dbtt33.bdf
trunk/dbthaitext_tis620/: dbtt22.bdf
trunk/debian/: changelog  control  copyright  rules  source.lintian-overrides  watch  xfonts-thai-etl.copyright  xfonts-thai-manop.copyright  xfonts-thai-manop.docs  xfonts-thai-nectec.copyright  xfonts-thai-nectec.install  xfonts-thai-poonlap.install  xfonts-thai.changelog-pre1.2.5  xfonts-thai.lintian-overrides
trunk/etlthai/: Makefile.am
trunk/manop/: Makefile.am
trunk/nectec/: Makefile.am
trunk/phaisarn/: Makefile.am  Phaisarn97-14.bdf  PtBrowallia12.bdf  PtBrowallia12.pcf.bdf  PtCUFont.bdf  PtHelvB12.pcf.bdf  PtSanSerif.bdf  PtThaiCOM.bdf  PtThaiSmall.bdf  PtThaiSmall.pcf.bdf  ThaiMedia.bdf  angsa10.bdf  angsa12.bdf  angsa12b.bdf  angsa16b.bdf  angsa16z.bdf  angsa18b.bdf  angsa18i.bdf
trunk/poonlap/: README  fonts.alias  fonts.dir  pvemacs_8r.bdf
trunk/yenbut/: Makefile.am  thai9x13.bdf
yenbut/: Makefile.am  README  thai8x13.bdf  thai9x13.bdf
yenbut_bdf/: thai8x13.bdf  thai9x13.bdf
