MAINTAINERCLEANFILES = Makefile.in

@MRULE@

EXTRA_DIST = \
	angsa10b.bdf \
	angsa10.bdf \
	angsa10i.bdf \
	angsa10z.bdf \
	angsa12b.bdf \
	angsa12.bdf \
	angsa12i.bdf \
	angsa12z.bdf \
	angsa14b.bdf \
	angsa14.bdf \
	angsa14i.bdf \
	angsa14z.bdf \
	angsa16b.bdf \
	angsa16.bdf \
	angsa16i.bdf \
	angsa16z.bdf \
	angsa18b.bdf \
	angsa18.bdf \
	angsa18i.bdf \
	angsa18z.bdf \
	angsa24b.bdf \
	angsa24.bdf \
	angsa24i.bdf \
	angsa24z.bdf \
	Phaisarn97-14.bdf \
	PnThai.bdf \
	PsThai.bdf \
	PtBrowallia12.bdf \
	PtCUFont.bdf \
	PtFixed.bdf \
	PtHelvB12.bdf \
	PtLight.bdf \
	PtMule.bdf \
	PtRamaFont.bdf \
	PtSanSerifB.bdf \
	PtSanSerif.bdf \
	PtThai.bdf \
	PtThaiCOM.bdf \
	PtThaiSmall.bdf \
	ThaiMedia.bdf \
	ThaiMediaMule.bdf

fontdir = $(DESTDIR)@fontdir@

font_DATA = \
	angsa10b.pcf.gz \
	angsa10i.pcf.gz \
	angsa10.pcf.gz \
	angsa10z.pcf.gz \
	angsa12b.pcf.gz \
	angsa12i.pcf.gz \
	angsa12.pcf.gz \
	angsa12z.pcf.gz \
	angsa14b.pcf.gz \
	angsa14i.pcf.gz \
	angsa14.pcf.gz \
	angsa14z.pcf.gz \
	angsa16b.pcf.gz \
	angsa16i.pcf.gz \
	angsa16.pcf.gz \
	angsa16z.pcf.gz \
	angsa18b.pcf.gz \
	angsa18i.pcf.gz \
	angsa18.pcf.gz \
	angsa18z.pcf.gz \
	angsa24b.pcf.gz \
	angsa24i.pcf.gz \
	angsa24.pcf.gz \
	angsa24z.pcf.gz \
	Phaisarn97-14.pcf.gz \
	PnThai.pcf.gz \
	PsThai.pcf.gz \
	PtBrowallia12.pcf.gz \
	PtCUFont.pcf.gz \
	PtFixed.pcf.gz \
	PtHelvB12.pcf.gz \
	PtLight.pcf.gz \
	PtMule.pcf.gz \
	PtRamaFont.pcf.gz \
	PtSanSerifB.pcf.gz \
	PtSanSerif.pcf.gz \
	PtThaiCOM.pcf.gz \
	PtThai.pcf.gz \
	PtThaiSmall.pcf.gz \
	ThaiMediaMule.pcf.gz \
	ThaiMedia.pcf.gz

