MAINTAINERCLEANFILES = Makefile.in

@MRULE@

EXTRA_DIST = \
	pvemacs_20b.bdf \
	pvemacs_20bi.bdf \
	pvemacs_20i.bdf \
	pvemacs_20r.bdf \
	pvemacs_8r.bdf \
	pvfixed_20b.bdf \
	pvfixed_20bi.bdf \
	pvfixed_20i.bdf \
	pvfixed_20r.bdf \
	pvfixed_8r.bdf \
	thai18b_emacs.bdf \
	thai18bi_emacs.bdf \
	thai18_emacs.bdf \
	thai18i_emacs.bdf

fontdir = @fontdir@

font_DATA = \
	pvemacs_20b.bdf \
	pvemacs_20bi.bdf \
	pvemacs_20i.bdf \
	pvemacs_20r.bdf \
	pvemacs_8r.bdf \
	pvfixed_20b.bdf \
	pvfixed_20bi.bdf \
	pvfixed_20i.bdf \
	pvfixed_20r.bdf \
	pvfixed_8r.bdf \
	thai18b_emacs.bdf \
	thai18bi_emacs.bdf \
	thai18_emacs.bdf \
	thai18i_emacs.bdf

