MAINTAINERCLEANFILES = Makefile.in

@MRULE@

fontdir = @fontdir@

font_DATA = \
	dbtt00.pcf.gz \
	dbtt01.pcf.gz \
	dbtt02.pcf.gz \
	dbtt03.pcf.gz \
	dbtt04.pcf.gz \
	dbtt05.pcf.gz \
	dbtt06.pcf.gz \
	dbtt07.pcf.gz \
	dbtt08.pcf.gz \
	dbtt09.pcf.gz \
	dbtt10.pcf.gz \
	dbtt11.pcf.gz \
	dbtt12.pcf.gz \
	dbtt13.pcf.gz \
	dbtt14.pcf.gz \
	dbtt15.pcf.gz \
	dbtt16.pcf.gz \
	dbtt17.pcf.gz \
	dbtt18.pcf.gz \
	dbtt19.pcf.gz \
	dbtt20.pcf.gz \
	dbtt21.pcf.gz \
	dbtt22.pcf.gz \
	dbtt23.pcf.gz \
	dbtt24.pcf.gz \
	dbtt25.pcf.gz \
	dbtt26.pcf.gz \
	dbtt27.pcf.gz \
	dbtt28.pcf.gz \
	dbtt29.pcf.gz \
	dbtt30.pcf.gz \
	dbtt31.pcf.gz \
	dbtt32.pcf.gz \
	dbtt33.pcf.gz \
	dbtt34.pcf.gz \
	dbtt35.pcf.gz

