DISTCLEANFILES = *.pcf.gz

@MRULE@

EXTRA_DIST = \
	Phaisarn97-14.bdf \
	PnThai.bdf \
	PsThai.bdf \
	PtCUFont.bdf \
	PtFixed.bdf \
	PtHelvB12.bdf \
	PtMule.bdf \
	PtRamaFont.bdf \
	PtThai.bdf \
	PtThaiCOM.bdf \
	PtThaiSmall.bdf

font_DATA = \
	Phaisarn97-14.pcf.gz \
	PnThai.pcf.gz \
	PsThai.pcf.gz \
	PtCUFont.pcf.gz \
	PtFixed.pcf.gz \
	PtHelvB12.pcf.gz \
	PtMule.pcf.gz \
	PtRamaFont.pcf.gz \
	PtThaiCOM.pcf.gz \
	PtThai.pcf.gz \
	PtThaiSmall.pcf.gz

