DISTCLEANFILES = *.pcf.gz

@MRULE@

EXTRA_DIST = \
	pvemacs_20b.bdf \
	pvemacs_20bi.bdf \
	pvemacs_20i.bdf \
	pvemacs_20r.bdf \
	pvemacs_8r.bdf \
	pvfixed_20b.bdf \
	pvfixed_20bi.bdf \
	pvfixed_20i.bdf \
	pvfixed_20r.bdf \
	pvfixed_8r.bdf \
	thai18b_emacs.bdf \
	thai18bi_emacs.bdf \
	thai18_emacs.bdf \
	thai18i_emacs.bdf

font_DATA = \
	pvemacs_20b.pcf.gz \
	pvemacs_20bi.pcf.gz \
	pvemacs_20i.pcf.gz \
	pvemacs_20r.pcf.gz \
	pvemacs_8r.pcf.gz \
	pvfixed_20b.pcf.gz \
	pvfixed_20bi.pcf.gz \
	pvfixed_20i.pcf.gz \
	pvfixed_20r.pcf.gz \
	pvfixed_8r.pcf.gz \
	thai18b_emacs.pcf.gz \
	thai18bi_emacs.pcf.gz \
	thai18_emacs.pcf.gz \
	thai18i_emacs.pcf.gz

